Fix stop button overlapping modals on some systems
Resolves #328
Mixing em and px broke it on Firefox on Fedora, because the font was larger.

--- a/src/TauStellwerk.WebClient/Pages/StopButton.razor.css
+++ b/src/TauStellwerk.WebClient/Pages/StopButton.razor.css
@@ -14,6 +14,7 @@
 div {
     margin: 0 -8px;
     text-align: center;
+    height: 3.5em;
     padding: 1em;
     flex: 0 0 auto;
     z-index: 100; /* Should always be displayed on top, even on overlays*/
